# stockstraders-test

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: run-tests.yml
tests/: conftest.py
tests/features/: login.feature
tests/pages/: base_page.py  login_page.py  terminal_page.py
tests/steps/: test_login.py
