[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stocks_traders_tests"
version = "0.0.1"
authors = [
  { name="Ksenia Loseva", email="loseva.xenia@gmail.com" },
]
description = "Tests for StocksTraders"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ksenia-loseva/stockstraders-test"